Реализовать парсинг файла и вывод резульатат

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hint.regexp">Регулярное выражение</string>
     <string name="button.stop">Стоп</string>
     <string name="button_start">Старт</string>
+
+    <string name="error.parsing">Ошибка при парсинге</string>
 </resources>
